
message CordSubscriberRoot {
  required string kind = 1 [ null = False,  default = "generic",  max_length = 30,  content_type = "stripped",  blank = False,  modifier = required,  db_index = False ];
  optional string name = 2 [ null = True,  max_length = 255,  content_type = "stripped",  blank = True,  help_text = "name",  modifier = optional,  db_index = False ];
  optional string service_specific_attribute = 3 [ db_index = False,  modifier = optional,  null = True,  blank = True ];
  optional string service_specific_id = 4 [ null = True,  max_length = 30,  content_type = "stripped",  blank = True,  modifier = optional,  db_index = False ];
  required bool firewall_enable = 5 [ db_index = False,  default = False,  modifier = required,  null = False,  blank = True ];
  optional string firewall_rules = 6 [ db_index = False,  default = "accept all anywhere anywhere",  modifier = optional,  null = True,  blank = True ];
  required bool url_filter_enable = 7 [ db_index = False,  default = False,  modifier = required,  null = False,  blank = True ];
  optional string url_filter_rules = 8 [ db_index = False,  default = "allow all",  modifier = optional,  null = True,  blank = True ];
  required string url_filter_level = 9 [ null = False,  default = "PG",  max_length = 30,  content_type = "stripped",  blank = False,  modifier = required,  db_index = False ];
  required bool cdn_enable = 10 [ db_index = False,  default = False,  modifier = required,  null = False,  blank = True ];
  required bool is_demo_user = 11 [ db_index = False,  default = False,  modifier = required,  null = False,  blank = True ];
  required int32 uplink_speed = 12 [ db_index = False,  default = 1000000000,  modifier = required,  null = False,  blank = False ];
  required int32 downlink_speed = 13 [ db_index = False,  default = 1000000000,  modifier = required,  null = False,  blank = False ];
  required bool enable_uverse = 14 [ db_index = False,  default = True,  modifier = required,  null = False,  blank = True ];
  required string status = 15 [ null = False,  default = "enabled",  choices = "(('enabled', 'Enabled'), ('suspended', 'Suspended'), ('delinquent', 'Delinquent'), ('copyrightviolation', 'Copyright Violation'))",  max_length = 30,  content_type = "stripped",  blank = False,  modifier = required,  db_index = False ];
}